tests/pass/comments/line_at_eof.tox
fn main() {
    print("ok"); // expect:ok
    // comment
}