tests/fail/bool.tox
fn main() {
    true(); //error:  Not callable
}